Used 8 point style theme

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Chroma Course is a Course selling website."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Chroma Course</title>
+  <!-- Link to Google Sans -->
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&display=swap" rel="stylesheet">
+  
+  <!-- Link to Google Sans Text -->
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Text:wght@400&display=swap" rel="stylesheet">
   </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
