--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Link to Google Sans Text -->
   <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Text:wght@400&display=swap" rel="stylesheet">
   </head>
-<body>
+<body class="dark:bg-dark-secondary">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!-- inlude this within the body -->
